update-manager (1:0.59.1) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewGtk.py:
    - do not fail if loading the svg pixbuf loader fails (LP#91593)

 --

update-manager (1:0.59) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py
    - quit any running instances of Adept
  * DistUpgrade/dist-upgrade.py
    - improve error message when failing to load frontend

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 12 Mar 2007 13:08:07 +0000

update-manager (1:0.58) feisty; urgency=low

  * UpdateManager/UpdateManager.py:
    - do not crash if download size can not be calculated (LP#90547)
  * fix build for all python versions (thanks to doko for help!) 
    (LP#90269)
  * strip changelog epoch too (LP#45566)
  * fix spelling mistakes (thanks to Bruce Cowan, LP#90833)
  * update download size if "check/uncheck" all was selected from 
    right-click menu
  * correct download speed string (LP#73721)
  * fix in the german translation (LP#68384)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  9 Mar 2007 14:58:36 +0100

update-manager (1:0.57.8) feisty; urgency=low

  * debian/rules:
    - moved dist-upgrade_$version generation to binary-indep

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  2 Mar 2007 10:49:53 +0100

update-manager (1:0.57.7) feisty; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - revert earlier commit in FuzzyTimeToStr() to make it not crash
  * debian/rules:
    - strip the epoch before runing dpkg-addfiles

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Feb 2007 14:25:39 +0100

update-manager (1:0.57.6) feisty; urgency=low

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py
    - Fix crash with incorrect connect() calls

  [ Michael Vogt ]
  * UpdateManager/ChangelogViewer.py:
    - fix some margins (thanks to Sebastian Heinlein)

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 27 Feb 2007 21:32:45 +0000

update-manager (1:0.57.5) feisty; urgency=low

  * UpdateManager/UpdateManager.py: